[package]
name = "gravit_runner"
version = "0.1.0"
authors = ["RussianJeb <russianjeb@protonmail.com>"]
edition = "2018"
build = "build.rs"


[dependencies]
crc32fast = "1.2"
zip = "0.5"
walkdir = "2.3"
dirs = "3.0"
anyhow = "1.0"
sha-1 = "0.9"
indicatif = "0.15"
minreq = { version = "2.3", features = ["https-native"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["winnt"]

[target.'cfg(target_os = "linux")'.dependencies]
uname = "0.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'