[package]
name = "gravit_runner"
version = "0.1.0"
authors = ["RussianJeb <russianjeb@protonmail.com>"]
edition = "2018"
build = "build.rs"


[dependencies]
crc32fast = "1.2"
walkdir = "2.3"
dirs = "3.0"
anyhow = "1.0"
sha-1 = "0.9"
minreq = { version = "2.3", features = ["https-native"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
druid = { version = "0.7", features = ["image-all"]}

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt"] }
zip = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
uname = "0.1"
flate2 = "1.0"
tar = "0.4"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'